# tinygo_zk

./: .gitignore  Cargo.toml  build_tinygo.sh  build_wasm.sh  go.mod  main.go  main.wasm  megaopt.aot  megaopt_go.wasm  minify_build.sh  notes.txt  optdefault.wat  optmega.wat  optsuper.wat  run_wasm.sh  run_zk_wasm.sh  superopt_go.wasm  tinygo_main.rs  tinygo_main.wasm  wasm-onepage.json  wasm-unknown-alloc.json  wasm_opt_metadce.json
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
src/: main.rs
