[package]
name = "wasm-interp"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20.1", default-features = false, features = ["std"] }
wasmi = { version = "0.31.2", features = ["std"] }

[package.metadata.release-profile.dependencies]
wasmi = { opt-level = 3, lto = "fat", codegen-units = 1 }